# fsfilter-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  DEBUG.md  EWDKbuild.md  MINIFILTER.md  README.md
.github/workflows/: rust.yml
minifilter/: .gitignore  RWatch.sln
minifilter/SharedDefs/: SharedDefs.h
minifilter/snFilter/: Communication.cpp  Communication.h  DriverData.cpp  DriverData.h  HashTable.h  KernelCommon.cpp  KernelCommon.h  KernelString.cpp  ShanonEntropy.cpp  ShanonEntropy.h  install.cmd  snFilter.cpp  snFilter.h  snFilter.inf  snFilter.rc  snFilter.vcxproj  snFilter.vcxproj.filters
src/: driver_comm.rs  lib.rs  shared_def.rs
