[package]
name = "fsfilter-rs"
version = "0.7.0"
edition = "2021"
authors = ["sn99 <siddharthn.099@gmail.com>"]
description = "A rust library to monitor filesystem and more in windows"
repository = "https://github.com/SubconsciousCompute/fsfilter-rs"
homepage = "https://github.com/SubconsciousCompute/fsfilter-rs"
license = "MIT"
readme = "README.md"
keywords = ["filesystem", "driver", "windows", "minifilter", "syscalls"]
categories = ["development-tools", "os::windows-apis", "filesystem", "api-bindings"]
documentation = "https://docs.rs/fsfilter-rs"

[dependencies]
sysinfo = "0.27.1"
widestring = "1.0.1"
serde = { version = "1.0.130", features = ["derive"] }
num-derive = "0.3"
num-traits = "0.2.14"
wchar = "0.11.0"

[dependencies.windows]
version = "0.44.0"
features = [
    "Win32_Storage_InstallableFileSystems",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_Diagnostics_Debug",
]

[profile.release]
lto = true
codegen-units = 1
opt-level = 3